// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField it always renders a label when \`alwaysShowLabel\` is true 1`] = `
.c4 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: -12px;
}

.c7 {
  margin-left: -32px;
  margin-top: -12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  margin-top: -20px;
  padding-left: 40px;
  padding-right: 40px;
}

.c6::-webkit-input-placeholder {
  color: #687B8E;
}

.c6::-moz-placeholder {
  color: #687B8E;
}

.c6:-ms-input-placeholder {
  color: #687B8E;
}

.c6::placeholder {
  color: #687B8E;
}

.c6::-ms-clear {
  display: none;
}

.c6:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c2 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-top: 6px;
  padding-left: 40px;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <label
    className="c2"
    color="gray"
    fontSize="10px"
    fontWeight="bold"
    htmlFor="with-both-icons"
    style={
      Object {
        "animation": "eMLfYp 0.3s",
      }
    }
  >
    A Label
  </label>
  <div
    className="c3"
    width={1}
  >
    <div
      className="c1 c4"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c6"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "8px",
          "paddingTop": "20px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c7"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a form field wth a label and icons 1`] = `
.c6 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c5::-webkit-input-placeholder {
  color: #687B8E;
}

.c5::-moz-placeholder {
  color: #687B8E;
}

.c5:-ms-input-placeholder {
  color: #687B8E;
}

.c5::placeholder {
  color: #687B8E;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c6"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a both icons 1`] = `
.c6 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c5::-webkit-input-placeholder {
  color: #687B8E;
}

.c5::-moz-placeholder {
  color: #687B8E;
}

.c5:-ms-input-placeholder {
  color: #687B8E;
}

.c5::placeholder {
  color: #687B8E;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c6"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a conditional right side icon 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  padding-left: 8px;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <input
      aria-label={null}
      className="c3"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a left side icon 1`] = `
.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  padding-left: 40px;
}

.c5::-webkit-input-placeholder {
  color: #687B8E;
}

.c5::-moz-placeholder {
  color: #687B8E;
}

.c5:-ms-input-placeholder {
  color: #687B8E;
}

.c5::placeholder {
  color: #687B8E;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-left-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a right side icon 1`] = `
.c4 {
  margin-left: -32px;
  margin-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 1px #d1d6db;
  padding-left: 8px;
  padding-right: 40px;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <input
      aria-label={null}
      className="c3"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c4"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        theme={
          Object {
            "bold": 600,
            "boxShadows": Array [
              "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
              "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
            ],
            "breakpoints": Array [
              32,
              40,
              48,
              64,
            ],
            "colors": Object {
              "black": "#000",
              "blue": "#007aff",
              "blue0": "#cdf",
              "blue1": "#cdf",
              "blue2": "#007aff",
              "blue3": "#007aff",
              "blues": Array [
                "#cdf",
                "#cdf",
                "#007aff",
                "#007aff",
              ],
              "borderGray": "#d1d6db",
              "darkBlue": "#049",
              "darkGray": "#364049",
              "darkGreen": "#060",
              "darkOrange": "#a50",
              "darkPurple": "#407",
              "darkRed": "#800",
              "gray": "#687B8E",
              "gray0": "#f6f8fa",
              "gray1": "#f6f8fa",
              "gray2": "#687B8E",
              "gray3": "#687B8E",
              "green": "#0a0",
              "green0": "#cec",
              "green1": "#cec",
              "green2": "#0a0",
              "green3": "#0a0",
              "greens": Array [
                "#cec",
                "#cec",
                "#0a0",
                "#0a0",
              ],
              "lightBlue": "#cdf",
              "lightGray": "#f6f8fa",
              "lightGreen": "#cec",
              "lightOrange": "#feb",
              "lightPurple": "#ecf",
              "lightRed": "#fcc",
              "orange": "#fa0",
              "orange0": "#feb",
              "orange1": "#feb",
              "orange2": "#fa0",
              "orange3": "#fa0",
              "oranges": Array [
                "#feb",
                "#feb",
                "#fa0",
                "#fa0",
              ],
              "purple": "#70b",
              "purple0": "#ecf",
              "purple1": "#ecf",
              "purple2": "#70b",
              "purple3": "#70b",
              "purples": Array [
                "#ecf",
                "#ecf",
                "#70b",
                "#70b",
              ],
              "red": "#c00",
              "red0": "#fcc",
              "red1": "#fcc",
              "red2": "#c00",
              "red3": "#c00",
              "reds": Array [
                "#fcc",
                "#fcc",
                "#c00",
                "#c00",
              ],
              "text": "#001833",
              "white": "#fff",
            },
            "duration": Object {
              "fast": 150,
              "normal": 300,
              "slow": 450,
              "slowest": 600,
            },
            "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
            ],
            "fontWeights": Object {
              "bold": 600,
              "regular": 400,
            },
            "letterSpacings": Object {
              "caps": "0.025em",
              "normal": "normal",
            },
            "maxContainerWidth": "1280px",
            "mediaQueries": Array [
              "@media screen and (min-width:32em)",
              "@media screen and (min-width:40em)",
              "@media screen and (min-width:48em)",
              "@media screen and (min-width:64em)",
            ],
            "radii": Array [
              0,
              2,
              6,
            ],
            "radius": "2px",
            "regular": 400,
            "space": Array [
              0,
              4,
              8,
              16,
              32,
              64,
              128,
            ],
            "timingFunctions": Object {
              "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
              "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
            },
          }
        }
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
